fixed details/summary fonts on mobile queries

--- a/style.css
+++ b/style.css
@@ -254,6 +254,14 @@ details[open] summary {
     header h1 {
         font-size: 2rem;
     }
+
+    details {
+        font-size: 1rem;
+    }
+    
+    summary {
+        font-size: 1rem;
+    }
     
     label h2 {
         display: none;
@@ -277,6 +285,14 @@ details[open] summary {
 
     h4, .content p, .content a {
         font-size: 1.5rem;
+    }
+
+    details {
+        font-size: 1rem;
+    }
+    
+    summary {
+        font-size: 1rem;
     }
 }
 
